# Yagi_backend

./: .gitignore  Cargo.toml  db.rs  livestock.db  sample_livestock.db
backend/src/: db.rs  db_helpers.rs  livestock.db  sample_livestock.db
backend/src/handlers/: mod.rs
migrations/: V1__create_goats.sql  V2__create_vaccinations_disesases.sql  V3__create_workers_equipment_sensors_spaces.sql
src/: db.rs  db_helpers.rs  errors.rs  generate_sample_data.rs  lib.rs  main.rs  models.rs  schema.sql
src/handlers/: goats.rs
tests/: integration_tests.rs
