[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
rusqlite = { version = "0.29", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0"
refinery = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
futures-util = "0.3"
actix-service = "2"

lazy_static = "1.4"  # for Mutex to coordinate DB cleanup
refinery_cli = "0.8"
chrono = "0.4"
rand = "0.8"
actix-rt = "2"
actix-http = "3"

[[bin]]
name = "generate_sample_data"
path = "src/generate_sample_data.rs"
